5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_1331.log
== SUBMITION (2019-04-01 15:20:08) 
-- CODE:
print(3/50)
-- EXECUTION TIME:
0.15954
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:09) 
-- CODE:
print(3/50)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:29) 
-- CODE:
print(50/3)
-- EXECUTION TIME:
0.119834
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:31) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:54) 
-- CODE:
print(50/
	/3)
-- EXECUTION TIME:
0.17056
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 2
    /3)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:55) 
-- CODE:
print(50/
	/3)
-- ERROR:
File "XXXX", line 2
    /3)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:49) 
-- CODE:
print(50%3)
-- EXECUTION TIME:
0.148507
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:50) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:15) 
-- CODE:
print(1 * 50 % 3)
print()
-- EXECUTION TIME:
0.15757
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:15) 
-- CODE:
print(1 * 50 % 3)
print()
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:34) 
-- CODE:
print(1*(50%3)

-- EXECUTION TIME:
0.177728
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 2
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:34) 
-- CODE:
print(1*(50%3)

-- ERROR:
File "XXXX", line 2
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:36) 
-- CODE:
print(1*(50%3)

-- EXECUTION TIME:
0.2088
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 2
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:41) 
-- CODE:
print(50//3)
print(50%1)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:43) 
-- CODE:
print(50//3)
print(50%1)

-- EXECUTION TIME:
0.157222
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:43) 
-- CODE:
print(50//3)
print(50%1)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:32:43) 
-- CODE:
print(45//3)
print(5%1)

-- EXECUTION TIME:
0.137259
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:43) 
-- CODE:
print(45//3)
print(5%1)

-- OUTPUT:
15
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:45) 
-- CODE:
print(45//3)
print(5%1)

-- OUTPUT:
15
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:33:43) 
-- CODE:
print(45//3)
print(50%4)

-- EXECUTION TIME:
0.122808
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:43) 
-- CODE:
print(45//3)
print(50%4)

-- OUTPUT:
15
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:33:54) 
-- CODE:
print(50//3)
print(50%4)

-- EXECUTION TIME:
0.144253
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:54) 
-- CODE:
print(50//3)
print(50%4)

-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
